<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_margin="4dp"
    app:cardElevation="6dp"
    app:cardCornerRadius="10dp"
    android:background="@android:color/transparent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_back" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idTVTime"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/cas"
            android:textColor="@color/white"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idTVTemperature"
            android:gravity="center"
            android:text="@string/_20"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_below="@+id/idTVTime"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/idIVCondition"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@id/idTVTemperature"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="0dp"
            android:padding="4dp"
            android:src="@drawable/cloudy"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/idIVCondition"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/rain"
                android:layout_width="37dp"
                android:layout_height="20dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="3dp"
                android:src="@drawable/raindrop" />

            <TextView
                android:id="@+id/idTVRain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_14"
                android:textSize="15sp"
                android:layout_marginRight="10px"
                android:textColor="@color/white" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>