<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_shade_1"
    tools:context=".MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ProgressBar
                android:id="@+id/idPBLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/idRLHome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/idIVBack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@color/back_shade_1" />

                <TextView
                    android:id="@+id/idTVCityTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:shadowColor="#000000"
                    android:shadowDx="0.0"
                    android:shadowDy="0.0"
                    android:shadowRadius="10.0"
                    android:text="Čas v mestu"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/idTVCityName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:padding="20dp"
                    android:shadowColor="#000000"
                    android:shadowDx="0.0"
                    android:shadowDy="0.0"
                    android:shadowRadius="10.0"
                    android:text="@string/ime_mesta"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/idLLEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idTVCityName"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/idTILCity"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="4.5"
                        android:background="@android:color/transparent"
                        android:hint="@string/vnesite_ime_mesta"
                        android:padding="5dp"
                        android:shadowColor="#000000"
                        android:shadowDx="0.0"
                        android:shadowDy="0.0"
                        android:shadowRadius="10.0"
                        android:textColorHint="@color/white"
                        app:boxStrokeColor="@android:color/transparent"
                        app:hintTextColor="@color/white">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/idEdtCity"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:shadowColor="#000000"
                            android:shadowDx="0.0"
                            android:shadowDy="0.0"
                            android:shadowRadius="10.0"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:id="@+id/idIVSearch"
                        android:layout_width="25sp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_weight="0.5"
                        android:src="@drawable/search"
                        tools:ignore="ContentDescription" />

                </LinearLayout>

                <TextView
                    android:id="@+id/idTVCityDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idLLEdt"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:shadowColor="#000000"
                    android:shadowDx="0.0"
                    android:shadowDy="0.0"
                    android:shadowRadius="10.0"
                    android:text="Ponedeljek, 28.3, 13:00"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/idTVTemperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idTVCityDate"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:shadowColor="#000000"
                    android:shadowDx="0.0"
                    android:shadowDy="0.0"
                    android:shadowRadius="10.0"
                    android:text="@string/_23"
                    android:textColor="@color/white"
                    android:textSize="70sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/idIVIcon"
                    android:layout_width="154dp"
                    android:layout_height="162dp"
                    android:layout_below="@id/idTVTemperature"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="-21dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/icon"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/idTVCondition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idIVIcon"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:shadowColor="#000000"
                    android:shadowDx="0.0"
                    android:shadowDy="0.0"
                    android:shadowRadius="10.0"
                    android:text="@string/stanje"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/idGLSun"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="5sp"
                    android:layout_marginBottom="10sp"
                    android:layout_marginRight="5sp"
                    android:layout_below="@id/idTVCondition"
                    app:cardCornerRadius="10dp"
                    android:layout_height="wrap_content">

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5sp"
                        android:columnCount="5"
                        android:background="@drawable/card_back" >

                        <ImageView
                            android:id="@+id/idIVSunrise"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_row="0"
                            android:layout_column="0"
                            android:layout_below="@id/idTVCondition"
                            android:layout_marginLeft="8dp"
                            android:src="@drawable/sunrise" />

                        <TextView
                            android:id="@+id/idTVSunrise"
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:layout_row="0"
                            android:layout_column="1"
                            android:layout_below="@id/idTVCondition"
                            android:layout_toRightOf="@id/idIVSunrise"
                            android:padding="10dp"
                            android:shadowColor="#000000"
                            android:shadowDx="0.0"
                            android:shadowDy="0.0"
                            android:shadowRadius="10.0"
                            android:text="6:00"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/idTVSunset"
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:layout_row="0"
                            android:layout_column="3"
                            android:gravity="right"
                            android:padding="10dp"
                            android:shadowColor="#000000"
                            android:shadowDx="0.0"
                            android:shadowDy="0.0"
                            android:shadowRadius="10.0"
                            android:text="19:00"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/idIVSunset"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_row="0"
                            android:layout_column="4"
                            android:layout_marginRight="10dp"
                            android:layout_toRightOf="@id/idIVSunset"
                            android:src="@drawable/sunset" />

                    </GridLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/idTVToday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idGLSun"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:shadowColor="#000000"
                    android:shadowDx="0.0"
                    android:shadowDy="0.0"
                    android:shadowRadius="10.0"
                    android:text="@string/danasnja_napoved"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/idRVWeather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idTVToday"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <TextView
                    android:id="@+id/idTVTomorrow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idRVWeather"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:shadowColor="#000000"
                    android:shadowDx="0.0"
                    android:shadowDy="0.0"
                    android:shadowRadius="10.0"
                    android:text="Napoved za prihodne dni"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/idRVDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idTVTomorrow"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>